--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "changeset:add": "npx changeset add",
+    "changeset:version": "npx changeset version",
+    "changeset:publish": "npx changeset publish",
+    "release": "npx changeset version && npx changeset publish && git push --follow-tags",
+    "release:tag": "npm run changeset:version && git push origin main && git tag v$(date +'%Y%m%d-%H%M%S') && git push --tags"
   },
   "keywords": [],
   "author": "",
