fix: publish tag yml

--- a/.github/workflows/publish-on-tag.yml
+++ b/.github/workflows/publish-on-tag.yml
@@ -31,14 +31,14 @@ jobs:
           pnpm install
           cd packages/template-react-ts && pnpm install
           cd ../template-vue-ts && pnpm install
-          cd ../store-preview && pnpm install
+          cd ../store-preview && yarn install
 
       - name: Publish packages to npm
         run: |
           echo "Publishing packages..."
           pnpm run changeset:publish
           cd packages/store-preview
-          pnpm run build
+          yarn build
           cd packages/store-preview/dist
           npm publish --access public
         env:
